# princess-number-blocks-game

./: Cargo.toml  index.html  manifest.json  pnbg.js  todo.md
assets/: numberblocks.aseprite
src/: animations.rs  background_music.rs  challenge.rs  common_components.rs  input_map.rs  main.rs  plugins.rs  scenes.rs
src/animations/: animation.rs  chest_animations.rs  numberblock_animations.rs  player_animations.rs
src/common/: components.rs  systems.rs
src/common/components/: life_timer.rs
src/common/systems/: lifespan.rs
src/common_components/: animation_timer.rs  obstacle.rs
src/plugins/: animation.rs  chest.rs  numberblock.rs  player.rs
src/plugins/chest/: components.rs  systems.rs
src/plugins/chest/components/: chest.rs  chest_state.rs
src/plugins/chest/systems/: chest_animation.rs
src/plugins/player/: components.rs  systems.rs
src/plugins/player/components/: animation_timer.rs  interaction_target.rs  player.rs  timers.rs
src/plugins/player/systems/: player_animation.rs  player_display.rs  player_interaction.rs  player_movement.rs
src/scenes/: game.rs  menu.rs  splash.rs
